--- a/templates/page.html
+++ b/templates/page.html
@@ -49,10 +49,29 @@
             {% endif %}
             
             <div class="mt-8">
-                <a href="{{ get_url(path='/works') }}" 
-                   class="inline-block text-sm hover:text-gray-600 transition">
-                    ← Volver a obras
-                </a>
+                {% if page.extra.category %}
+                    {% if page.extra.category == "Grabados" %}
+                        <a href="{{ get_url(path='/grabados') }}" 
+                           class="inline-block text-sm hover:text-gray-600 transition">
+                            ← Volver a Grabados
+                        </a>
+                    {% elif page.extra.category == "Pinturas" %}
+                        <a href="{{ get_url(path='/pinturas') }}" 
+                           class="inline-block text-sm hover:text-gray-600 transition">
+                            ← Volver a Pinturas
+                        </a>
+                    {% elif page.extra.category == "Instalaciones" %}
+                        <a href="{{ get_url(path='/instalaciones') }}" 
+                           class="inline-block text-sm hover:text-gray-600 transition">
+                            ← Volver a Instalaciones
+                        </a>
+                    {% endif %}
+                {% else %}
+                    <a href="{{ get_url(path='/') }}" 
+                       class="inline-block text-sm hover:text-gray-600 transition">
+                        ← Volver al inicio
+                    </a>
+                {% endif %}
             </div>
         </div>
     </div>
