fix: reemplazar get_url() por paths relativos, actualizar base_url a carolinavildosola.com

--- a/templates/index.html
+++ b/templates/index.html
@@ -64,15 +64,15 @@
     </div>
     
     <div class="text-center mt-12 flex gap-4 justify-center flex-wrap">
-        <a href="{{ get_url(path='/grabados') }}" 
+        <a href="/grabados" 
            class="inline-block px-8 py-3 border border-gray-900 hover:bg-gray-900 hover:text-white transition">
             Grabados
         </a>
-        <a href="{{ get_url(path='/pinturas') }}" 
+        <a href="/pinturas" 
            class="inline-block px-8 py-3 border border-gray-900 hover:bg-gray-900 hover:text-white transition">
             Pinturas
         </a>
-        <a href="{{ get_url(path='/instalaciones') }}" 
+        <a href="/instalaciones" 
            class="inline-block px-8 py-3 border border-gray-900 hover:bg-gray-900 hover:text-white transition">
             Instalaciones
         </a>
