--- a/templates/base.html
+++ b/templates/base.html
@@ -11,17 +11,17 @@
     <nav class="fixed top-0 left-0 right-0 z-50 bg-white border-b border-gray-200">
         <div class="container mx-auto px-6 py-4">
             <div class="flex items-center justify-between">
-                <a href="{{ get_url(path='/') }}" class="text-xl font-light tracking-wide hover:text-gray-600 transition">
+                <a href="/" class="text-xl font-light tracking-wide hover:text-gray-600 transition">
                     {{ config.title }}
                 </a>
                 
                 <!-- Desktop Navigation -->
                 <div class="hidden md:flex gap-8 text-sm">
-                    <a href="{{ get_url(path='/grabados') }}" class="hover:text-gray-600 transition">Grabados</a>
-                    <a href="{{ get_url(path='/pinturas') }}" class="hover:text-gray-600 transition">Pinturas</a>
-                    <a href="{{ get_url(path='/instalaciones') }}" class="hover:text-gray-600 transition">Instalaciones</a>
-                    <a href="{{ get_url(path='/biografia') }}" class="hover:text-gray-600 transition">Biografía</a>
-                    <a href="{{ get_url(path='/contacto') }}" class="hover:text-gray-600 transition">Contacto</a>
+                    <a href="/grabados" class="hover:text-gray-600 transition">Grabados</a>
+                    <a href="/pinturas" class="hover:text-gray-600 transition">Pinturas</a>
+                    <a href="/instalaciones" class="hover:text-gray-600 transition">Instalaciones</a>
+                    <a href="/biografia" class="hover:text-gray-600 transition">Biografía</a>
+                    <a href="/contacto" class="hover:text-gray-600 transition">Contacto</a>
                 </div>
                 
                 <!-- Mobile Menu Button -->
@@ -35,11 +35,11 @@
             <!-- Mobile Navigation -->
             <div id="mobile-menu" class="hidden md:hidden mt-4 pb-4 border-t border-gray-200 pt-4">
                 <div class="flex flex-col gap-4 text-sm">
-                    <a href="{{ get_url(path='/grabados') }}" class="hover:text-gray-600 transition py-2">Grabados</a>
-                    <a href="{{ get_url(path='/pinturas') }}" class="hover:text-gray-600 transition py-2">Pinturas</a>
-                    <a href="{{ get_url(path='/instalaciones') }}" class="hover:text-gray-600 transition py-2">Instalaciones</a>
-                    <a href="{{ get_url(path='/biografia') }}" class="hover:text-gray-600 transition py-2">Biografía</a>
-                    <a href="{{ get_url(path='/contacto') }}" class="hover:text-gray-600 transition py-2">Contacto</a>
+                    <a href="/grabados" class="hover:text-gray-600 transition py-2">Grabados</a>
+                    <a href="/pinturas" class="hover:text-gray-600 transition py-2">Pinturas</a>
+                    <a href="/instalaciones" class="hover:text-gray-600 transition py-2">Instalaciones</a>
+                    <a href="/biografia" class="hover:text-gray-600 transition py-2">Biografía</a>
+                    <a href="/contacto" class="hover:text-gray-600 transition py-2">Contacto</a>
                 </div>
             </div>
         </div>
